--- a/amqp_hooks/config/daemon.conf
+++ b/amqp_hooks/config/daemon.conf
@@ -1,10 +1,4 @@
-[Broker]
-exchange=amq.direct
-ip=127.0.0.1
-port=5672
-queue=grid
-
-[AMQP_Module]
+[Daemon]
 ip=127.0.0.1
 port=10000
 queued_connections=5
