- Corrected typoes in INSTALL - Fixed issues running on python2.3 (ie RHEL4) - All tests are now single threaded except for performance, which now uses   the threading module instead of fork. - Fixed dependency issue in spec.  >= python 2.3 is now required.

--- a/amqp_hooks/Makefile
+++ b/amqp_hooks/Makefile
@@ -55,6 +55,7 @@ SOURCES/${LOWLAT_SOURCE}: carod config/carod.conf config/condor-low-latency.init
 	cp -f LICENSE-2.0.txt ${LOWLAT_DIR}
 	tar -cf ${LOWLAT_SOURCE} ${LOWLAT_DIR}
 	mv "${LOWLAT_SOURCE}" SOURCES
+	cp -f config/rhel4_init.patch SOURCES/condor-low-latency-rhel4-init.patch
 
 clean:
 	rm -rf ${RPMBUILD_DIRS} ${HOOKS_DIR} ${LOWLAT_DIR}
