--- a/condor-job-hooks.spec.in
+++ b/condor-job-hooks.spec.in
@@ -1,16 +1,21 @@
 %{!?python_sitelib: %define python_sitelib %(%{__python} -c "from distutils.sysconfig import get_python_lib; print get_python_lib()")}
-%{!?is_fedora: %define is_fedora %(/bin/sh -c "if [ -e /etc/fedora-release ];then echo '1'; fi")}
-%global rel 4
+
+%if (0%{?fedora} == 0 && 0%{?rhel} <= 5)
+%global building_for_el5 1
+%else
+%global building_for_el5 0
+%endif
 
 Summary: Condor Job Hooks
 Name: condor-job-hooks
-Version: 1.5
-Release: %{rel}%{?dist}
+Version: #VERSION#
+Release: #RELEASE#%{?dist}
 License: ASL 2.0
 Group: Applications/System
 URL: http://git.fedorahosted.org/git/grid/job_hooks.git
-Source0: %{name}-%{version}-%{rel}.tar.gz
-BuildRoot: %(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
+Source0: https://fedorahosted.org/releases/g/r/grid/%{name}-%{version}.tar.gz
+#PATCHES#
+BuildRoot: %(mktemp -ud %{_tmppath}/%{name}-%{version}-XXXXXX)
 BuildArch: noarch
 Requires: python >= 2.3
 Requires: condor >= 7.0.2-4
@@ -35,6 +40,8 @@ Common functions and utilities used by condor features.
 %prep
 %setup -q
 
+#APPLY_PATCHES#
+
 %build
 
 %install
@@ -47,7 +54,7 @@ rm -f %{buildroot}/%_libexecdir/condor/hooks/hook_evict_claim.*
 cp -f module/*.py %{buildroot}/%{python_sitelib}/condorutils
 
 %post
-%if 0%{?is_fedora} == 0
+%if 0%{?fedora} == 0
 if [[ -f /etc/opt/grid/job-hooks.conf ]]; then
    mv -f /etc/opt/grid/job-hooks.conf /etc/condor
    rmdir --ignore-fail-on-non-empty -p /etc/opt/grid
@@ -55,11 +62,15 @@ fi
 %endif
 exit 0
 
+%if %{building_for_el5}
 %clean
 rm -rf %{buildroot}
+%endif
 
 %files
+%if %{building_for_el5}
 %defattr(-,root,root,-)
+%endif
 %doc LICENSE-2.0.txt INSTALL
 %defattr(0755,root,root,-)
 %_libexecdir/condor/hooks/hook_fetch_work.py*
@@ -69,7 +80,9 @@ rm -rf %{buildroot}
 %_libexecdir/condor/hooks/hook_update_job_status.py*
 
 %files -n python-condorutils
+%if %{building_for_el5}
 %defattr(-,root,root,-)
+%endif
 %doc LICENSE-2.0.txt
 %{python_sitelib}/condorutils/__init__.py*
 %{python_sitelib}/condorutils/log.py*
