--- a/condor-job-hooks.spec.in
+++ b/condor-job-hooks.spec.in
@@ -92,6 +92,10 @@ rm -rf %{buildroot}
 %{python_sitelib}/condorutils/workfetch.py*
 
 %changelog
+* Mon Jan 16 2012  <rrati@redhat> - 1.5-5
+- Packaging improvements
+- Renamed INSTALL file to CONFIG
+
 * Wed Jul 22 2011  <rrati@redhat> - 1.5-4
 - Added optional arg to read_condor_config to control lookup of param without
   subsystem
