Updated spec to 1.5-6

--- a/condor-job-hooks.spec.in
+++ b/condor-job-hooks.spec.in
@@ -92,6 +92,9 @@ rm -rf %{buildroot}
 %{python_sitelib}/condorutils/workfetch.py*
 
 %changelog
+* Wed Nov  7 2012  <rrati@redhat> - 1.5-6
+- Updated for branding change to HTCondor
+
 * Mon Jan 16 2012  <rrati@redhat> - 1.5-5
 - Packaging improvements
 - Renamed INSTALL file to CONFIG
